added secrets to a secret file

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -19,6 +19,9 @@ target/
 *.iml
 *.ipr
 
+### application secret variables
+src/main/resources/application-secrets.yml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
