--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -21,6 +21,7 @@ target/
 
 ### application secret variables
 src/main/resources/application-secrets.yml
+key/clean-pr.2025-09-15.private-key.pem
 
 ### NetBeans ###
 /nbproject/private/
