--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,12 +14,17 @@ spring:
               - read:user
               - user:email
   datasource:
-    url: jdbc:postgresql://localhost:5432/cleanpr
-    username: cleanpr
-    password: "@clean-pr-gang-209"
+    url:  ${spring.datasource.url}
+    username: ${spring.application.name}
+    password: ${spring.datasource.password}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
+      ddl-auto: update   # creates/updates tables automatically
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
       ddl-auto: create-drop
 
 client:
