feature(PullRequestEventHandler): added code patch collection and pr file downloading. next -> prompt the llm for a summary and a review

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     username: ${spring.application.name}
     password: ${spring.datasource.password}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 5   # keep this small for Supabase free/small tiers
+      minimum-idle: 1
   jpa:
     hibernate:
       ddl-auto: update   # creates/updates tables automatically
