feature: deletes pr when a installation is uninstalled and when a repo is removed from an installation

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     active: secrets
   application:
     name: cleanPR
+  ai:
+    openai:
+      api-key: ${openai.api-key}
   security:
     oauth2:
       client:
@@ -14,13 +17,9 @@ spring:
               - read:user
               - user:email
   datasource:
-    url:  ${spring.datasource.url}
-    username: ${spring.application.name}
-    password: ${spring.datasource.password}
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 5   # keep this small for Supabase free/small tiers
-      minimum-idle: 1
+    url:  ${postgres.url}
+    username: ${postgres.name}
+    password: ${postgres.password}
   jpa:
     hibernate:
       ddl-auto: update   # creates/updates tables automatically
@@ -41,6 +40,10 @@ server:
 github:
   appId: 1953390
   key: C:\Users\fahda\Downloads\clean-pr.2025-09-15.private-key.pem
+
+#logging:
+#  level:
+#    root: DEBUG
 
 
 
