--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,6 +101,7 @@
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version> <!-- Use the latest version -->
 		</dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -117,10 +118,19 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
+
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-core</artifactId>
+			<version>1.0.0-M6</version>
+		</dependency>
+
+		<!-- For OpenAI -->
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-openai</artifactId>
+		</dependency>
+
 
     </dependencies>
 	<dependencyManagement>
