--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
   ai:
     openai:
       api-key: ${openai.api-key}
+      chat:
+        options:
+          model: gpt-4o
   security:
     oauth2:
       client:
@@ -44,7 +47,6 @@ github:
 #logging:
 #  level:
 #    root: DEBUG
-
 
 
 
