--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -33,7 +33,8 @@ spring:
 client:
   url: ${CLIENT_URL}
 
-jwt.secret.key: ${JWT_SECRET}
+jwt:
+  secret.key: ${JWT_SECRET}
 
 server:
   port: ${PORT:8081}
